--- a/templates/downloading.html
+++ b/templates/downloading.html
@@ -2,18 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='stylesdl.css') }}">
+    <title>Downloading...</title>
 </head>
 <body>
-    <script>
-        var source = new EventSource("/display_progress");
-        source.onmessage = function (event) {
-            $('.progress-bar').css('width', event.data + '%').attr('aria-valuenow',event.data);
-            $('.progress-bar-label').text(event.data + '%');
-            if (event.data == 100) {
-                source.close()
-            }
-    }
-    </script>
+    <div class="progress">
+    <div class="progress-value"></div>
+    </div>
+    <script type=text/javascript src="{{url_for('static', filename='jquery.js') }}"></script>
 </body>
 </html>
