--- a/static/stylesdl.css
+++ b/static/stylesdl.css
@@ -1,16 +1,16 @@
-
-
 body {
-  display: flex;
-  margin: 0 auto;
-  min-width: 400px;
-  min-height: 100vh;
   background: #252525;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 
 
 .progress {
-  background: rgba(255,255,255,0.1);
+  background: #121212;
   justify-content: flex-start;
   border-radius: 100px;
   align-items: center;
@@ -23,9 +23,11 @@ body {
 
 .progress-value {
   animation: load 3s normal forwards;
+  transition: width 0.5s;
+  -webkit-transition: width 0.5s;
   box-shadow: 0 10px 40px -10px #fff;
   border-radius: 100px;
   background: #fff;
   height: 30px;
-  width: 40%;
+  width: 0;
 }
