--- a/templates/alreadydownloaded.html
+++ b/templates/alreadydownloaded.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="{{url_for('static',filename='icon.png') }}">
+    <title>Already Downloaded</title>
 </head>
 <body style="background: #252525;
   justify-content: center;
