--- a/templates/download.html
+++ b/templates/download.html
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask Template Example</title>
+    <title>Choose Resolution</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
     <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='stylesd.css') }}">
+    <link rel="icon" href="{{url_for('static',filename='icon.png') }}">
   </head>
   <body>
 
