--- a/templates/downloading.html
+++ b/templates/downloading.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='stylesdl.css') }}">
+    <link rel="icon" href="{{url_for('static',filename='icon.png') }}">
     <title>Downloading...</title>
 </head>
 <body>
